--- a/Pages/Chat.cshtml
+++ b/Pages/Chat.cshtml
@@ -11,7 +11,8 @@
 <div id="messagesList" class="messages"></div>
 <div class="input-zone">
     <textarea id="messageInput" class="form-control"></textarea>
-    <button id="sendButton" class="btn btn-outline-primary ml-2 p-3">Send</button>
+    <button id="sendButton" class="btn btn-outline-primary ml-2 px-4 py-3">Send</button>
+    <button id="exitButton" class="btn btn-outline-primary ml-2 px-4 py-3">Exit</button>
 </div>
 
 @section Scripts {
