--- a/Pages/Account/LoginWith2fa.cshtml
+++ b/Pages/Account/LoginWith2fa.cshtml
@@ -38,4 +38,7 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
+    <script>
+        $("#Input_TwoFactorCode").focus();
+    </script>
 }
