--- a/Pages/Chat.cshtml
+++ b/Pages/Chat.cshtml
@@ -17,8 +17,11 @@
             <textarea id="txtMessage" autocomplete="off" class="form-control"></textarea>
         </div>
     </div>
-    <div class="row float-right">
-        <div class="col-12 mt-2">
+    <div class="row">
+        <div class="col-3">
+            <div id="countUsers" class="text-primary"></div>
+        </div>
+        <div class="col-9 text-right mt-2">
             <select id="selUsers" style="min-width:200px;"></select>
             <button id="btnSendMessage" class="btn btn-outline-primary mb-1 py-0 text-center">Send</button>
             <button id="btnStart" class="btn btn-outline-success mb-1 py-0" style="display:none;">Start</button>
