--- a/Pages/Chat.cshtml
+++ b/Pages/Chat.cshtml
@@ -32,5 +32,5 @@
 
 @section Scripts {
     <script src="~/lib/signalr/dist/browser/signalr.js"></script>
-    <script src="~/js/chat.js"></script>
+    <script src="~/js/chat.js" asp-append-version="true"></script>
 }
